--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "~2.5.2",
     "express": "~4.14.0",
     "express-messages": "^1.0.1",
+    "google-translate-api": "^2.3.0",
     "md5": "^2.2.1",
     "moment": "^2.17.1",
     "mongodb": "^2.2.21",
